Fix tests and minor bug in backfill code.